--- a/src/start/StartView.fxml
+++ b/src/start/StartView.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="start.StartController">
    <center>
       <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
@@ -49,7 +48,7 @@
             <Button maxWidth="-Infinity" mnemonicParsing="false" onAction="#adminLogin" text="Admin" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="16.0" />
             <ImageView fx:id="imageView" fitHeight="180.0" fitWidth="115.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="8.0">
                <image>
-                  <Image url="@logo_default.png" />
+                  <Image url="@../test/img/logo_default.png" />
                </image>
             </ImageView>
          </children>
