--- a/src/survey/SurveyView2.fxml
+++ b/src/survey/SurveyView2.fxml
@@ -4,24 +4,16 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="survey.SurveyController">
    <children>
-      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" smooth="false" StackPane.alignment="TOP_RIGHT">
-         <image>
-            <Image url="@../test/img/logo_default.png" />
-         </image>
-         <StackPane.margin>
-            <Insets right="8.0" top="8.0" />
-         </StackPane.margin>
-      </ImageView>
+      <Pane fx:id="pane" prefHeight="200.0" prefWidth="200.0" />
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <center>
             <VBox fx:id="vbox" alignment="TOP_CENTER" BorderPane.alignment="CENTER" />
