--- a/src/start/StartView.fxml
+++ b/src/start/StartView.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-
 <StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="start.StartController">
    <children>
       <Pane fx:id="pane" prefHeight="200.0" prefWidth="200.0" />
@@ -39,7 +38,7 @@
             </GridPane>
          </center>
          <bottom>
-            <Button mnemonicParsing="false" onAction="#next" text="Start" BorderPane.alignment="CENTER">
+            <Button fx:id="btn_start" mnemonicParsing="false" onAction="#next" text="Start" BorderPane.alignment="CENTER">
                <BorderPane.margin>
                   <Insets bottom="16.0" />
                </BorderPane.margin>
