--- a/src/react/ReactView.fxml
+++ b/src/react/ReactView.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="react.ReactController">
    <top>
       <Label text="Sichtbarkeitsbedingungen ändern" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -15,14 +17,14 @@
       </Label>
    </top>
    <center>
-      <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="tbl_react" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
       	<placeholder>
         	<Label text="Keine Bedinungen gesetzt." />
     	</placeholder>
         <columns>
-          <TableColumn maxWidth="1.7976931348623157E308" prefWidth="158.0" text="Frage" />
-          <TableColumn maxWidth="1.7976931348623157E308" prefWidth="198.0" text="Antwort" />
-            <TableColumn maxWidth="1.7976931348623157E308" prefWidth="204.0" text="Beschreibung" />
+          <TableColumn fx:id="questions" prefWidth="63.0" text="Frage" />
+          <TableColumn fx:id="answers" prefWidth="509.0" text="Antwort" />
+          <TableColumn fx:id="comments" prefWidth="204.0" text="Frage ist sichtbar, wenn..." />
         </columns>
          <BorderPane.margin>
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
@@ -32,4 +34,23 @@
          </columnResizePolicy>
       </TableView>
    </center>
+   <bottom>
+      <HBox prefHeight="51.0" prefWidth="600.0" spacing="8.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="btn_new" mnemonicParsing="false" onAction="#createNew" text="Neu">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#save" text="Spiechern" />
+            <Button mnemonicParsing="false" onAction="#exit" text="Abbruch" />
+         </children>
+         <BorderPane.margin>
+            <Insets left="8.0" right="8.0" />
+         </BorderPane.margin>
+         <padding>
+            <Insets bottom="8.0" top="8.0" />
+         </padding>
+      </HBox>
+   </bottom>
 </BorderPane>
