--- a/src/main/resources/view/SurveyPreView.fxml
+++ b/src/main/resources/view/SurveyPreView.fxml
@@ -14,7 +14,7 @@
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" smooth="false" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
                <image>
-                  <Image url="@../../resources/images/img/logo_default.png" />
+                  <Image url="@../images/img/logo_default.png" />
                </image>
             </ImageView>
             <ProgressBar fx:id="progressBar" layoutX="100.0" layoutY="15.0" prefHeight="25.0" prefWidth="159.0" progress="0.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="15.0" />
@@ -24,7 +24,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Button layoutX="14.0" layoutY="361.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#exit" prefHeight="50.0" prefWidth="50.0" text="X" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" />
+            <Button layoutX="14.0" layoutY="361.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#exitPreVeiw" prefHeight="50.0" prefWidth="50.0" text="X" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" />
             <Button layoutX="527.0" layoutY="356.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#next" prefHeight="50.0" prefWidth="50.0" text="&gt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="15.0" />
             <Button layoutX="537.0" layoutY="366.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#pre" prefHeight="50.0" prefWidth="50.0" text="&lt;" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="80.0" />
             <VBox fx:id="vbox" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="100.0" />
