--- a/src/main/resources/view/AdminView.fxml
+++ b/src/main/resources/view/AdminView.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin.AdminController"> 
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin.AdminController">
    <top>
       <AnchorPane prefHeight="66.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -39,10 +38,10 @@
       </AnchorPane>
    </top>
    <bottom>
-      <AnchorPane prefHeight="48.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button layoutX="79.0" layoutY="2.0" mnemonicParsing="false" onAction="#newFragebogen" text="neu" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="79.0" />
-         </children></AnchorPane>
+       <AnchorPane prefHeight="48.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+           <Button layoutX="79.0" layoutY="2.0" mnemonicParsing="false" onAction="#newFragebogen" text="neu"
+                   AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="79.0"/>
+       </AnchorPane>
    </bottom>
    <center>
       <TableView fx:id="tbl_fragebogen" editable="true" BorderPane.alignment="CENTER">
