--- a/src/main/resources/view/AdminView.fxml
+++ b/src/main/resources/view/AdminView.fxml
@@ -13,29 +13,27 @@
 <?import javafx.scene.layout.HBox?>
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin.AdminController">
    <top>
-      <AnchorPane prefHeight="66.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label alignment="TOP_CENTER" layoutX="238.0" layoutY="19.0" prefHeight="17.0" prefWidth="125.0" text="Fragebogen Übersicht" textAlignment="CENTER" AnchorPane.leftAnchor="238.0" AnchorPane.rightAnchor="237.0" AnchorPane.topAnchor="15.0" />
-            <Button layoutX="526.0" layoutY="15.0" mnemonicParsing="false" onAction="#logout" text="Logout" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0" />
-            <HBox prefHeight="47.0" prefWidth="200.0" spacing="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="15.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#exit" text="X" textAlignment="CENTER" />
-                  <Button fx:id="btn_loc" mnemonicParsing="false" onAction="#changeLocation">
-                     <graphic>
-                        <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/icons/standort_2.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <tooltip>
-                        <Tooltip text="Standort wechseln" />
-                     </tooltip>
-                  </Button>
-               </children>
-            </HBox>
-         </children>
-      </AnchorPane>
+       <AnchorPane prefHeight="66.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+           <Label alignment="TOP_CENTER" layoutX="238.0" layoutY="19.0" prefHeight="17.0" prefWidth="125.0"
+                  text="Fragebogen Übersicht" textAlignment="CENTER" AnchorPane.leftAnchor="238.0"
+                  AnchorPane.rightAnchor="237.0" AnchorPane.topAnchor="15.0"/>
+           <Button layoutX="526.0" layoutY="15.0" mnemonicParsing="false" onAction="#logout" text="Logout"
+                   AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0"/>
+           <HBox prefHeight="47.0" prefWidth="200.0" spacing="15.0" AnchorPane.leftAnchor="15.0"
+                 AnchorPane.topAnchor="15.0">
+               <Button mnemonicParsing="false" onAction="#exit" text="X" textAlignment="CENTER"/>
+               <Button fx:id="btn_loc" mnemonicParsing="false" onAction="#changeLocation">
+                   <graphic>
+                       <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                           <Image url="@../images/icons/standort_2.png"/>
+                       </ImageView>
+                   </graphic>
+                   <tooltip>
+                       <Tooltip text="Standort wechseln"/>
+                   </tooltip>
+               </Button>
+           </HBox>
+       </AnchorPane>
    </top>
    <bottom>
        <AnchorPane prefHeight="48.0" prefWidth="600.0" BorderPane.alignment="CENTER">
