--- a/src/main/resources/view/QuestionView.fxml
+++ b/src/main/resources/view/QuestionView.fxml
@@ -16,6 +16,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+
 <BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="question.QuestionController">
    <bottom>
       <AnchorPane prefHeight="48.0" prefWidth="600.0" BorderPane.alignment="CENTER">
@@ -35,16 +36,16 @@
          <children>
             <VBox prefHeight="511.0" prefWidth="313.0" spacing="16.0" HBox.hgrow="ALWAYS">
                <children>
-                  <GridPane prefHeight="402.0" prefWidth="524.0">
+                  <GridPane prefHeight="295.0" prefWidth="443.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="108.0" />
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="335.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="32.0" vgrow="ALWAYS" />
-                      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="28.0" vgrow="ALWAYS" />
-                      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="16.0" vgrow="ALWAYS" />
-                        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+                      <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="32.0" vgrow="ALWAYS" />
+                      <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="28.0" vgrow="ALWAYS" />
+                      <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="16.0" vgrow="ALWAYS" />
+                        <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="30.0" vgrow="ALWAYS" />
                     </rowConstraints>
                      <children>
                         <Label maxWidth="1.7976931348623157E308" text="Frage:" />
@@ -77,65 +78,77 @@
                                     <Insets left="8.0" />
                                  </HBox.margin>
                               </ChoiceBox>
-                              <CheckBox fx:id="chckbxUeberschrift" mnemonicParsing="false" text="Überschrift" />
+                              <CheckBox fx:id="chckbxUeberschrift" mnemonicParsing="false" onAction="#updateCheckboxes" text="Überschrift" />
                            </children>
                         </HBox>
                      </children>
                   </GridPane>
-                  <FlowPane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                  <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <CheckBox fx:id="chckbxTextArea" mnemonicParsing="false" text="Textarea">
-                           <FlowPane.margin>
-                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                           </FlowPane.margin>
-                        </CheckBox>
-                        <CheckBox fx:id="chckbxPflichtfrage" mnemonicParsing="false" text="Pflichtfrage">
-                           <FlowPane.margin>
-                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                           </FlowPane.margin>
-                        </CheckBox>
-                        <CheckBox fx:id="chckbxMultipleChoice" mnemonicParsing="false" text="Multiple Choice">
-                           <FlowPane.margin>
-                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                           </FlowPane.margin>
-                        </CheckBox>
-                        <CheckBox fx:id="chckbxJaNein" mnemonicParsing="false" text="ja/nein Frage">
-                           <FlowPane.margin>
-                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                           </FlowPane.margin>
-                        </CheckBox>
-                        <CheckBox fx:id="chckbxX" mnemonicParsing="false" text="einzeilig">
-                           <FlowPane.margin>
-                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                           </FlowPane.margin>
-                        </CheckBox>
-                        <CheckBox fx:id="chckbxListe" mnemonicParsing="false" text="Liste">
-                           <FlowPane.margin>
-                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                           </FlowPane.margin>
-                        </CheckBox>
-                        <CheckBox fx:id="chckbxZahl" mnemonicParsing="false" text="Zahl">
-                           <FlowPane.margin>
-                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                           </FlowPane.margin>
-                        </CheckBox>
-                        <Button mnemonicParsing="false" onAction="#react" prefHeight="25.0" prefWidth="114.0" text="Frage reagiert auf">
-                           <FlowPane.margin>
-                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                           </FlowPane.margin>
-                        </Button>
-                        <ChoiceBox fx:id="zahlChoice" prefWidth="150.0">
-                           <FlowPane.margin>
-                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                           </FlowPane.margin>
-                        </ChoiceBox>
-                        <TextField fx:id="textFieldZahl">
-                           <FlowPane.margin>
-                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                           </FlowPane.margin>
-                        </TextField>
+                        <FlowPane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                           <children>
+                              <CheckBox fx:id="chckbxTextArea" mnemonicParsing="false" onAction="#updateCheckboxes" text="Textarea">
+                                 <FlowPane.margin>
+                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                 </FlowPane.margin>
+                              </CheckBox>
+                              <CheckBox fx:id="chckbxPflichtfrage" mnemonicParsing="false" onAction="#updateCheckboxes" text="Pflichtfrage">
+                                 <FlowPane.margin>
+                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                 </FlowPane.margin>
+                              </CheckBox>
+                              <CheckBox fx:id="chckbxMultipleChoice" mnemonicParsing="false" onAction="#updateCheckboxes" text="Multiple Choice">
+                                 <FlowPane.margin>
+                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                 </FlowPane.margin>
+                              </CheckBox>
+                              <CheckBox fx:id="chckbxJaNein" mnemonicParsing="false" onAction="#updateCheckboxes" text="ja/nein Frage">
+                                 <FlowPane.margin>
+                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                 </FlowPane.margin>
+                              </CheckBox>
+                              <CheckBox fx:id="chckbxX" mnemonicParsing="false" onAction="#updateCheckboxes" text="einzeilig">
+                                 <FlowPane.margin>
+                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                 </FlowPane.margin>
+                              </CheckBox>
+                              <CheckBox fx:id="chckbxListe" mnemonicParsing="false" onAction="#updateCheckboxes" text="Liste">
+                                 <FlowPane.margin>
+                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                 </FlowPane.margin>
+                              </CheckBox>
+                           </children>
+                        </FlowPane>
+                        <FlowPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <CheckBox fx:id="chckbxZahl" mnemonicParsing="false" onAction="#updateCheckboxes" text="Zahl">
+                                 <FlowPane.margin>
+                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                 </FlowPane.margin>
+                              </CheckBox>
+                              <ChoiceBox fx:id="zahlChoice" prefWidth="150.0">
+                                 <FlowPane.margin>
+                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                 </FlowPane.margin>
+                              </ChoiceBox>
+                              <TextField fx:id="textFieldZahl" onAction="#updateCheckboxes">
+                                 <FlowPane.margin>
+                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                 </FlowPane.margin>
+                              </TextField>
+                           </children>
+                        </FlowPane>
+                        <FlowPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#react" text="Frage reagiert auf">
+                                 <FlowPane.margin>
+                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                 </FlowPane.margin>
+                              </Button>
+                           </children>
+                        </FlowPane>
                      </children>
-                  </FlowPane>
+                  </VBox>
                </children>
             </VBox>
             <VBox prefHeight="512.0" prefWidth="187.0" spacing="8.0" HBox.hgrow="ALWAYS">
@@ -149,7 +162,7 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <Button mnemonicParsing="false" onAction="#createAnswer" text="Neue Antwort">
+                  <Button fx:id="btnNewAnswer" mnemonicParsing="false" onAction="#createAnswer" text="Neue Antwort">
                      <VBox.margin>
                         <Insets bottom="16.0" top="16.0" />
                      </VBox.margin>
